<resources>
    <string name="app_name">N0.1 F2 Smartwatch Companion</string>
    <string name="steps">Steps</string>
    <string name="unknownValueUi">---</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="altitude">Altitude</string>
    <string name="uv">UV</string>
    <string name="set_alarm">Set alarm</string>
    <string name="enable_action">Enable Action</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="find_device">Find device</string>

    <string name="enable_bluetooth_advice">You must enable the bluetooth to connect with the device</string>
    <string name="enable_location_advice">You must enable the location to obtain meteorological information</string>
</resources>
