<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="2"
    app:rowOrderPreserved="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_columnSpan="2"
        app:layout_columnWeight="2"
        app:layout_gravity="fill_horizontal|center_vertical"
        app:layout_rowWeight="2">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textAppearance="?attr/textAppearanceHeadline4"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stepsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownValueUi"
            android:textAppearance="?attr/textAppearanceHeadline3"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal|center_vertical"
        app:layout_rowWeight="1">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownValueUi"
            android:textAppearance="?attr/textAppearanceHeadline5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal|center_vertical"
        app:layout_rowWeight="1">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uv"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/uvTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownValueUi"
            android:textAppearance="?attr/textAppearanceHeadline5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal|center_vertical"
        app:layout_rowWeight="1">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownValueUi"
            android:textAppearance="?attr/textAppearanceHeadline5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal|center_vertical"
        app:layout_rowWeight="1">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/altitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownValueUi"
            android:textAppearance="?attr/textAppearanceHeadline5" />

    </LinearLayout>
</androidx.gridlayout.widget.GridLayout>
